--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "practice package for creating a web application framework",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:db": "json-server -w db.json",
+    "start:parcel": "npx parcel index.html"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,12 @@
   },
   "homepage": "https://github.com/kes-edge/web-app-framework#readme",
   "dependencies": {
+    "axios": "^1.4.0",
+    "json-server": "^0.17.3",
     "parcel-bundler": "^1.12.5"
+  },
+  "devDependencies": {
+    "buffer": "^5.7.1",
+    "typescript": "^5.1.6"
   }
 }
