--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "json-server": "^0.17.3",
+    "parcel": "^2.9.3",
     "parcel-bundler": "^1.12.5"
   },
   "devDependencies": {
