--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "json-server": "^0.17.3",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "buffer": "^5.7.1",
